<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ABF4AE"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/slikaItem"
        android:layout_width="131dp"
        android:layout_height="491dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/biljka"
        tools:srcCompat="@drawable/biljka"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/nazivItem"
        android:layout_width="264dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/naziv"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/korist1Item"
        android:layout_width="91dp"
        android:layout_height="165dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="81dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/korist1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/slikaItem"
        app:layout_constraintTop_toBottomOf="@+id/upozorenjeItem" />

    <TextView
        android:id="@+id/upozorenjeItem"
        android:layout_width="264dp"
        android:layout_height="122dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="@string/upozorenje"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazivItem" />

    <TextView
        android:id="@+id/korist2Item"
        android:layout_width="95dp"
        android:layout_height="167dp"
        android:layout_marginTop="81dp"
        android:text="@string/korist2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/korist1Item"
        app:layout_constraintTop_toBottomOf="@+id/upozorenjeItem" />

    <TextView
        android:id="@+id/korist3Item"
        android:layout_width="89dp"
        android:layout_height="166dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="4dp"
        android:text="@string/korist3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upozorenjeItem" />

</androidx.constraintlayout.widget.ConstraintLayout>