<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="590dp">

        <ImageView
            android:id="@+id/slikaItem"
            android:layout_width="131dp"
            android:layout_height="361dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/biljka"
            tools:srcCompat="@drawable/biljka"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/nazivItem"
            android:layout_width="230dp"
            android:layout_height="117dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:text="@string/naziv"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/slikaItem"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profilOkusaItem"
            android:layout_width="236dp"
            android:layout_height="101dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/profilOkusa"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/slikaItem"
            app:layout_constraintTop_toBottomOf="@+id/nazivItem" />

        <TextView
            android:id="@+id/jelo1Item"
            android:layout_width="85dp"
            android:layout_height="149dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:text="@string/jelo1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/slikaItem"
            app:layout_constraintTop_toBottomOf="@+id/profilOkusaItem" />

        <TextView
            android:id="@+id/jelo2Item"
            android:layout_width="68dp"
            android:layout_height="150dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="26dp"
            android:text="@string/jelo2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/jelo1Item"
            app:layout_constraintTop_toBottomOf="@+id/profilOkusaItem" />

        <TextView
            android:id="@+id/jelo3Item"
            android:layout_width="71dp"
            android:layout_height="156dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="102dp"
            android:text="@string/jelo3"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/jelo2Item"
            app:layout_constraintTop_toBottomOf="@+id/profilOkusaItem" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>