<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FAFAFA"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="708dp">

        <ImageView
            android:id="@+id/slikaItem"
            android:layout_width="111dp"
            android:layout_height="508dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="310dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/klimatskiTipItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/biljka"
            tools:srcCompat="@drawable/biljka"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/nazivItem"
            android:layout_width="274dp"
            android:layout_height="65dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="11dp"
            android:text="@string/naziv"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/slikaItem"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/porodicaItem"
            android:layout_width="276dp"
            android:layout_height="56dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:text="@string/porodica"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/slikaItem"
            app:layout_constraintTop_toBottomOf="@+id/nazivItem" />

        <TextView
            android:id="@+id/klimatskiTipItem"
            android:layout_width="267dp"
            android:layout_height="115dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="4dp"
            android:text="@string/klimatskiTip"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/slikaItem"
            app:layout_constraintTop_toBottomOf="@+id/porodicaItem" />

        <TextView
            android:id="@+id/zemljisniTipItem"
            android:layout_width="275dp"
            android:layout_height="72dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:text="@string/zemljisniTip"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/slikaItem"
            app:layout_constraintTop_toBottomOf="@+id/klimatskiTipItem" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>