<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A710E"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/modSpinner"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="56dp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/biljkeRV"
        android:layout_width="403dp"
        android:layout_height="303dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:background="#00000000"
        android:backgroundTint="#000000"
        android:foregroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modSpinner" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="87dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-117dp" />

    <Button
        android:id="@+id/novaBiljkaBtn"
        android:layout_width="133dp"
        android:layout_height="53dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="18dp"
        android:text="@string/dodajBiljku"
        app:layout_constraintBottom_toTopOf="@+id/bojaSPIN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biljkeRV" />

    <EditText
        android:id="@+id/pretragaET"
        android:layout_width="187dp"
        android:layout_height="49dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/brzaPretraga"
        app:layout_constraintEnd_toStartOf="@+id/bojaSPIN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novaBiljkaBtn" />

    <Spinner
        android:id="@+id/bojaSPIN"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/brzaPretraga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pretragaET"
        app:layout_constraintTop_toBottomOf="@+id/novaBiljkaBtn" />

    <Button
        android:id="@+id/brzaPretraga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="1dp"
        android:text="@string/pretraga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bojaSPIN" />

</androidx.constraintlayout.widget.ConstraintLayout>